compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__let_assert__int_pattern.snap
---
source: compiler-core/src/erlang/tests/let_assert.rs
expression: "pub fn go() {\n  let assert 1 = 2\n}"
---
----- SOURCE CODE
pub fn go() {
  let assert 1 = 2
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([go/0]).

-spec go() -> integer().
go() ->
    case 2 of
        1 = _value ->
            _value;

        _value@1 ->
            erlang:error(#{
                gleam_error => let_assert,
                message => ~"Pattern match failed, no pattern matched the value.",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"go",
                line => 2,
                value => _value@1,
                start => 16,
                'end' => 32,
                pattern_start => 27,
                pattern_end => 28
            })
    end.
